Auto IRC Bot 3.0: Change Log
-------------------------------------------------------------------------------

3.0 Indev
===============================================================================
    * Changed on_notice arguments to: \%src, $target, @msg
    * Clean up shutdown.
    * Created event on_shutdown.
    * Shutdown if there are no more IRC connections.
    * Added the ability to use printf(3) % variables in trans().
    * Added slog() to API::Log for logging to IRC.
    * Added a Greet module for greeting users on join.
    * Added PostgreSQL support. Official modules do not support this yet.
    * database:format now a required configuration value.
    * Added support for MySQL. ./install --with-mysql
    * Added a database upgrade script for upgrading the `qdb` table in 3.0.0a3
      to the new format used by 3.0.0a4.

3.0 Alpha 3
===============================================================================
    * Added command rate limiting.
    * Added module installer to ./install.
    * Added a module buildsys.
    * Added a QDB module.
    * SIGHUP now triggers a rehash.
    * Added core command REHASH.
    * Moved signal handlers to Lib::Auto.
    * Renamed src/ to lib/.
    * Switched from Auto-Flatfile to SQLite for database backend.
    * Added a Badwords module.
    * Added kick() to API::IRC.
    * Added DBI and DBD::SQLite to core dependencies.
    * Added on_connect hook, triggered after we receive 001.
    * Updated hooks to use hashrefs.
    * Moved CTCP VERSION reply to Core::IRC.
    * Renamed Core::IRC to Core::Cmd.
    * Parse MODE.
    * Added CertFP support.
    * Rewrote socket read/write methods.
    * Added SSL support.
    * Added act() to API::IRC.
    * Added IPv6 support.

3.0 Alpha 2
===============================================================================
    * Added update check for non-indev releases.
    * Added Git revision to version string for dev releases.